--- a/aula06/ex004.html
+++ b/aula06/ex004.html
@@ -13,10 +13,10 @@
 <body>
     
     <script>
-        var nome = window.prompt(' Qual é o seu nome? ')
-        document.write(` Olá, ${nome}! Seu nome tem ${nome.length} letras. <br/>`)
-        document.write(`Seu nome em maiúsculas é ${nome.toUpperCase()} <br/>`)
-        document.write(`Seu nome em minúsculas é ${nome.toLowerCase()}`)
+        var nome = window.prompt('Qual é o seu nome? ')
+        document.write(`Olá ${nome}, você sabia que o seu nome tem ${nome.length} letras? <br/>`)
+        document.write(`${nome} você sabia que o seu nome em maiúsculas fica assim: ${nome.toUpperCase()} <br/>`)
+        document.write(`${nome} e você sabia que o seu nome em minúsculas fica assim: ${nome.toLowerCase()}`)
     </script>
 </body>
 </html>
