--- a/aula06/ex002.html
+++ b/aula06/ex002.html
@@ -27,6 +27,7 @@
     <script>
       var nome = window.prompt(" Qual é o seu nome? ");
       window.alert(" É um grande prazer em te conhecer ," + nome + "!");
+      window.alert(`é um prazer em te conhecer ${nome}`)
     </script>
   </body>
 </html>
