--- a/aula04/ex001.html
+++ b/aula04/ex001.html
@@ -28,6 +28,11 @@
       window.alert(" Minha primeira mensagem!"); // Alerta
       window.confirm(" Você está gostando do curso de JavaScript? "); // pede uma confirmação do usuário com um 'ok' ou 'Cancelar'
       window.prompt(" Qual é o seu nome? "); // pede o nome do usuário
+
+      /* quando utilizamos o window.alert('') -> vamos mostrar um alerta para o usuário a tela dele.
+      quando utilzamos o window.confirm('') -> vamos mostrar uma 'alerta' e o usuário deverá confirmar com 'ok' ou 'cancelar'
+      quando utilizamos o window.prompt('') -> signfica que vamos inserir um campo de texto para que o usuário possa preencher.
+      */
     </script>
   </body>
 </html>
