--- a/aula13/ex014/ex001.html
+++ b/aula13/ex014/ex001.html
@@ -6,13 +6,13 @@
     <title>Hora do dia</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body onload="carregar()">
     <header>
         <h1>Hora do dia</h1>
     </header>
     <section>
         <div id="msg">
-            Aqui vai aparecer a mensagem
+            Aqui vai aparecer a mensagem...
         </div>
 
         <div id="foto">
